kubernetes/cloud-native-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: cloud-native-app
  labels:
    name: cloud-native-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: cloud-native-app
  type: LoadBalancer
