kubernetes/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: envoy
  namespace: kube-system
  labels:
    name: envoy
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: envoy
  type: LoadBalancer
