kubernetes/kubernetes-envoy-sds.yaml
# Taken from Kelsey Hightower's Kubernetes Envoy SDS Tutorial
# Github URL: https://github.com/kelseyhightower/kubernetes-envoy-sds

kind: Deployment
apiVersion: apps/v1beta1
metadata:
  labels:
    app: kubernetes-envoy-sds
  name: kubernetes-envoy-sds
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-envoy-sds
      name: kubernetes-envoy-sds
    spec:
      containers:
        - name: kubernetes-envoy-sds
          image: gcr.io/hightowerlabs/kubernetes-envoy-sds:0.0.1
          imagePullPolicy: Always
          args:
            - "-http=0.0.0.0:80"
        - name: kubectl
          image: gcr.io/google_containers/hyperkube:v1.7.2
          command:
            - "/hyperkube"
          args:
            - "kubectl"
            - "proxy"
---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-envoy-sds
  namespace: kube-system
spec:
  selector:
    app: kubernetes-envoy-sds
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
